--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,29 @@ html{
   scroll-behavior: smooth;
 }
 
+#preloader{
+  background-image: url(../assets/images/loader.gif);
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 999;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
 
+
+::-webkit-scrollbar{
+  width: 10px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #c87e4f;
+  border-radius: 10px;
+}
 
 :root{
   --body-font: 'Poppins', sans-serif;
